<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/video_call_button"
        android:orderInCategory="100"
        android:title="@string/action_video_call"
        android:icon="@drawable/video_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_voice_call"
        android:orderInCategory="100"
        android:title="@string/action_voice_call"
        android:icon="@drawable/phone_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_view_contact"
        android:orderInCategory="100"
        android:title="@string/action_view_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_media_links_and_docs"
        android:orderInCategory="100"
        android:title="@string/action_media_links_and_docs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_mute_notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_wallpaper"
        android:orderInCategory="100"
        android:title="@string/action_wallpaper"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:title="@string/action_more"
        app:showAsAction="never" />

</menu>