<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jswhatsapp.MainActivity">

    <item
        android:id="@+id/search_button"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/search_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="100"
        android:title="@string/action_new_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_broadcast"
        android:orderInCategory="100"
        android:title="@string/action_new_broadcast"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_whatsApp_web"
        android:orderInCategory="100"
        android:title="@string/action_whatsApp_web"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stared_messages"
        android:orderInCategory="100"
        android:title="@string/action_stared_messages"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>